discard unnecessary script and fix label text not showing hover

--- a/packages/scandipwa/src/component/CheckoutPayment/CheckoutPayment.style.scss
+++ b/packages/scandipwa/src/component/CheckoutPayment/CheckoutPayment.style.scss
@@ -48,6 +48,5 @@
 
     .Field_type_checkbox {
         margin-block-start: 0;
-        pointer-events: auto;
     }
 }
